# storage/api-docs/api-docs.json
@@ -555,6 +555,43 @@
                 }
             }
         },
+        "/api/profile/account/admin_login": {
+            "put": {
+                "tags": [
+                    "Account"
+                ],
+                "summary": "Update the specified resource in storage.",
+                "description": "Administrator login",
+                "operationId": "06e87a412a9b77ab94977fa0c320ceb5",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "description": "Administrator email",
+                                        "type": "string",
+                                        "example": "ihamzehald@gmail.com"
+                                    },
+                                    "password": {
+                                        "description": "Administrator password",
+                                        "type": "string",
+                                        "example": "larapoints123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/profile/account/register": {
             "post": {
                 "tags": [
@@ -866,6 +903,130 @@
                         "description": "OK"
                     }
                 }
+            }
+        },
+        "/api/chats": {
+            "get": {
+                "tags": [
+                    "Chats"
+                ],
+                "summary": "Get the rooms list.",
+                "description": "List of Chats",
+                "operationId": "6251d5747f5521ee29cd3005a8a115e8",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/chat/{room_id}": {
+            "get": {
+                "tags": [
+                    "Chats"
+                ],
+                "summary": "Get room info.",
+                "description": "Get room",
+                "operationId": "cdfe49d2cc24be7d33dfa712faeb0154",
+                "parameters": [
+                    {
+                        "name": "room_id",
+                        "in": "path",
+                        "description": "",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/messages/{room_id}": {
+            "get": {
+                "tags": [
+                    "Chats"
+                ],
+                "summary": "Get the list of messages.",
+                "description": "list of messages",
+                "operationId": "862587bb3015836d07af7496dc8c7dfd",
+                "parameters": [
+                    {
+                        "name": "room_id",
+                        "in": "path",
+                        "description": "",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/messages": {
+            "post": {
+                "tags": [
+                    "Chats"
+                ],
+                "summary": "Add message",
+                "description": "Add message",
+                "operationId": "4d6d22423166ad0b9d0ea80350650be5",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "room_id": {
+                                        "description": "Room ID",
+                                        "type": "integer",
+                                        "example": "4"
+                                    },
+                                    "message": {
+                                        "description": "Message",
+                                        "type": "string",
+                                        "example": "Some message"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         }
     },
